@@ -1,7 +1,7 @@
 #  File src/library/tools/R/QC.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2018 The R Core Team
+#  Copyright (C) 1995-2019 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -6070,8 +6070,11 @@ function(package, dir, lib.loc = NULL)
     enc <- db["Encoding"]
     if(!is.na(enc) &&
        (Sys.getlocale("LC_CTYPE") %notin% c("C", "POSIX"))) {
-        ## FIXME: what if conversion fails on e.g. UTF-8 comments
-        con <- file(file, encoding = enc)
+        ## Avoid conversion failing on e.g. UTF-8 comments
+        ## con <- file(file, encoding = enc)
+        lines <- iconv(readLines(file, warn = FALSE),
+                       from = "UTF-8", to = "", sub = "byte")
+        con <- textConnection(lines)
         on.exit(close(con), add = TRUE)
     } else con <- file
 
